<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joy2twist</name>
  <version>1.0.0</version>
  <description>The joy2twist package</description>
  <maintainer email="pawel.irzyk@husarion.com">Paweł Irzyk</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/husarion/joy2twist</url>
  <author email="pawel.irzyk@husarion.com">Paweł Irzyk</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>joy_linux</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
